src/main/kotlin/com/example/APITaller/error/ErrorRespuesta.kt
package com.example.APITaller.error

data class ErrorRespuesta(
    var message: String,
    var uri: String
)